com.unity.adaptiveperformance.samsung.android dependency

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "unityRelease": "55f1",
   "dependencies": {
     "com.unity.adaptiveperformance": "5.1.5",
+    "com.unity.adaptiveperformance.samsung.android": "5.1.0",
     "com.unity.xr.openxr": "1.15.1",
     "com.unity.xr.hands": "1.5.1",
     "com.unity.addressables": "2.6.0"
