--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.phenominalviborg.muco",
+  "name": "com.phenomenalviborg.muco",
   "version": "0.1.0",
   "displayName": "MUCO",
   "description": "MUCO Core Package",
@@ -15,8 +15,8 @@
     "VR"
   ],
   "author": {
-    "name": "Phenominal Viborg",
-    "email": "info@phenominalvibor.com",
+    "name": "Phenomenal Viborg",
+    "email": "info@phenomenalvibor.com",
     "url": "https://www.phenomenalviborg.com/"
   },
   "license": "LGPL-3.0-or-later"
