--- a/Runtime/phenomenalviborg.muco.asmdef
+++ b/Runtime/phenomenalviborg.muco.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "phenominalviborg.muco",
+    "name": "phenomenalviborg.muco",
     "rootNamespace": "",
     "references": [
         "GUID:3935f9c8f1c7e614b9bb3b74aff92dd2",
